[project]
name = "the-hive"
version = "0.1.0"
description = "Team of Agents that discover and recommend influencers given a brand and/or product"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.5.6",
    "crawl4ai>=0.6.3",
    "googlesearch-python>=1.3.0",
    "pycountry>=24.6.1",
    "pydantic>=2.11.5",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
